Optimized image container and added new color

--- a/index.html
+++ b/index.html
@@ -10,13 +10,9 @@
 </head>
 <body>
     <div class="left-container">
-        <img class="tennis-ball" src="img/tennis_ball.jpg" alt="Close up of a green tennis ball on a white line">
-        <div class="brand-container">
-            <div class="text-background"></div>
-            <div class="title-container">
-                <img class="logo" src="img/logo.png" alt="The company logo">
-                <h1 class="title">Tennis</h1>
-            </div>
+        <div class="title-container">
+            <img class="logo" src="img/logo.png" alt="The company logo">
+            <h1 class="title">Green Court</h1>
         </div>
     </div>
     <form class="form" action="">
